--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ input {
   border: none;
   border-radius: 25px;
   font-family: inherit;
+  font-size: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   min-width: 300px;
 }
@@ -35,5 +36,7 @@ input:focus {
 }
 
 .weather h2 {
+  display: flex;
+  align-items: center;
   margin-bottom: 0;
 }
